--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,8 +1,11 @@
 
 // Body
-$body-bg: #f5f8fa;
+// $body-bg: #FFFFFF;
+$body-bg: hsl(0, 0%, 86%);
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+//navbar
+$navbar-default-bg:#888888;
